scripts/tests/errors/err_for_empty.bu
// BAD: for with missing parts
for () {
    break;
}
print("should not reach here");
